# actimotus

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  tests.yml
abbreviations/: index.html
changelog/: index.html
contributing/: index.html
dev/: 02_sens.ipynb  chunks.ipynb  custom_calibration.ipynb  diaries.ipynb  features.ipynb  gaps.ipynb  logging.ipynb  plots.ipynb  sens.ipynb  test.ipynb
docs/: abbreviations.md  reference.md
docs/learn/: processing.md
docs/references/: activities.md  exposures.md  features.md  parsers.md
docs/superpowers/: dst-daily-grouping-bug.md
docs/superpowers/plans/: 2026-07-05-diary-context-mapping.md  2026-07-05-diary-validation-hardening.md
docs/superpowers/specs/: 2026-07-05-diary-context-mapping-design.md  2026-07-05-diary-validation-hardening-design.md  2026-07-06-exposures-dst-daily-grouping-design.md  2026-07-06-row-inverted-inclination-bound-design.md
examples/: 01_local.ipynb  02_sens.ipynb
learn/processing/: index.html
references/activities/: index.html
references/exposures/: index.html
references/features/: index.html
references/parsers/: index.html
search/: search_index.json
src/acti_motus/: __init__.py  activities.py  calibration.py  exposures.py  features.py  iterators.py  settings.py
src/acti_motus/classification/: __init__.py  calf.py  references.py  sensor.py  thigh.py  trunk.py
src/acti_motus/classifications/: arm.py  calf.py  references.py  sensor.py  thigh.py  trunk.py
src/acti_motus/logger/: utils.py
src/actimotus/: activities.py  exposures.py  features.py  sens_parser.py  settings.py
src/actimotus/classifications/: thigh.py  trunk.py
superpowers/dst-daily-grouping-bug/: index.html
superpowers/plans/2026-07-05-diary-context-mapping/: index.html
superpowers/plans/2026-07-05-diary-validation-hardening/: index.html
superpowers/specs/2026-07-05-diary-context-mapping-design/: index.html
superpowers/specs/2026-07-05-diary-validation-hardening-design/: index.html
superpowers/specs/2026-07-06-exposures-dst-daily-grouping-design/: index.html
superpowers/specs/2026-07-06-row-inverted-inclination-bound-design/: index.html
tests/: conftest.py  test_exposures_context.py  test_exposures_dst.py  test_exposures_valid.py  test_thigh_row.py
validations/: analysis.ipynb  functions.py  one.ipynb
validations/axivity_thigh_back_adults/: analysis.ipynb  prepare_dataset.ipynb
validations/axivity_thigh_back_adults/data/ground_truth/: S006.parquet  S008.parquet  S009.parquet  S010.parquet  S012.parquet  S013.parquet  S014.parquet  S015.parquet  S016.parquet  S017.parquet  S018.parquet  S019.parquet  S020.parquet  S021.parquet  S022.parquet  S023.parquet  S024.parquet  S025.parquet  S026.parquet  S027.parquet  S028.parquet  S029.parquet  S030.parquet  S031.parquet  S032.parquet  S033.parquet  S034.parquet  S035.parquet  S036.parquet  S037.parquet  S038.parquet
validations/axivity_thigh_back_adults/data/thigh/: S009.parquet  S023.parquet  S024.parquet  S025.parquet  S026.parquet  S027.parquet  S028.parquet  S029.parquet  S030.parquet  S032.parquet  S033.parquet  S034.parquet  S035.parquet  S036.parquet  S037.parquet  S038.parquet
validations/axivity_thigh_back_adults/data/trunk/: S009.parquet  S023.parquet  S024.parquet  S025.parquet  S026.parquet  S027.parquet  S028.parquet  S029.parquet  S030.parquet  S032.parquet  S033.parquet  S034.parquet  (+4 more)
validations/axivity_thigh_back_seniors/: analysis.ipynb  process.ipynb
validations/sens_thigh/: analysis.ipynb  prepare_dataset.ipynb  process.ipynb
validations/sens_thigh/ground_truth/: P02_2.parquet  P03.parquet  P05.parquet  P06.parquet  P08.parquet  P09.parquet  P11.parquet  P12.parquet  P14.parquet  P15.parquet  P17.parquet  P19.parquet  P20.parquet  P22.parquet  P23.parquet  P25.parquet  P27.parquet  P28.parquet  P29.parquet  P30.parquet  P33.parquet  P34.parquet  P36.parquet  P38.parquet
validations/sens_thigh/parquets/: P02.parquet  P03.parquet  P05.parquet  P07.parquet  P08.parquet  P09.parquet  P12.parquet  P14.parquet  P16.parquet  P18.parquet  P19.parquet  P21.parquet  P24.parquet  P25.parquet  P26.parquet  P27.parquet  P28.parquet  P30.parquet  P32.parquet  P33.parquet  P34.parquet  P35.parquet  P37.parquet  P38.parquet
validations/thigh+trunk_adults/: process_dataset.ipynb
validations/validation/: analysis.ipynb  functions.py  one.ipynb
(+80 files in other folders)
