[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acti-motus"
version = "2.3.1"
description = "Python-powered human activity recognition algorithm that build upon Acti4, processing data from multiple accelerometers with a required thigh sensor."
readme = "README.md"
authors = [
    {name = "Josef Heidler", email = "heidlerjosef@gmail.com"},
    {name = "Jon Roslyng Larsen", email = "xjla@nfa.dk"},
    {name = "Sebastian Asmussen Sode Hørlück", email = "ssh@nfa.dk"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["accelerometers", "human-activity-recognition", "movement-behavior"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Operating System :: OS Independent',
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "vegafusion>=2.0.2",
]

[project.urls]
Homepage = 'https://actimotus.josefheidler.cz'
Documentation = 'https://actimotus.josefheidler.cz'
Source = 'https://github.com/actimotus/actimotus'
Changelog = 'https://github.com/actimotus/actimotus/blob/main/CHANGELOG.md'

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pyinstrument>=5.0.2",
    "ruff>=0.11.11",
    "kaleido==0.2.1",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "labda",
    "actipy>=3.8.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

[tool.hatch.build.targets.sdist]
# limit which files are included in the sdist (.tar.gz) asset,
include = [
    '/README.md',
    '/src',
]

[tool.hatch.build.targets.wheel]
packages = ["src/actimotus"]

[tool.ruff.lint]
pydocstyle = { convention = 'google' }

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
labda = { path = "../labda" }
